[gd_scene load_steps=18 format=3 uid="uid://dsexvncared2a"]

[ext_resource type="Script" path="res://character.gd" id="1_yk8tt"]
[ext_resource type="Script" path="res://ObjVisual.gd" id="2_3vm3s"]
[ext_resource type="Script" path="res://StatHolder.gd" id="2_bkena"]
[ext_resource type="PackedScene" uid="uid://u0gfmgg02wqn" path="res://abilities/ranged.tscn" id="2_nlwwx"]
[ext_resource type="PackedScene" uid="uid://b804jqfif2qko" path="res://abilities/move.tscn" id="4_d6du7"]
[ext_resource type="Script" path="res://AttacheblePool.gd" id="4_twbgf"]
[ext_resource type="PackedScene" uid="uid://clsqf34vf70l6" path="res://stats/stats_holder.tscn" id="7_orrsb"]

[sub_resource type="Resource" id="Resource_fxmhd"]
resource_local_to_scene = true
script = ExtResource("2_bkena")
mind = 20
body = 20
spirit = 20

[sub_resource type="Resource" id="Resource_u3yh2"]
resource_local_to_scene = true
script = ExtResource("2_bkena")
mind = 20
body = 20
spirit = 20

[sub_resource type="Resource" id="Resource_ai6jt"]
resource_local_to_scene = true
script = ExtResource("2_bkena")
mind = 1
body = 1
spirit = 1

[sub_resource type="Resource" id="Resource_sa6fp"]
resource_local_to_scene = true
script = ExtResource("2_bkena")
mind = 0
body = 0
spirit = 4

[sub_resource type="Resource" id="Resource_m5eeg"]
resource_local_to_scene = true
script = ExtResource("2_bkena")
mind = 0
body = 0
spirit = 1

[sub_resource type="Resource" id="Resource_tkpgx"]
resource_local_to_scene = true
script = ExtResource("2_bkena")
mind = 0
body = 6
spirit = 0

[sub_resource type="Resource" id="Resource_poxm0"]
resource_local_to_scene = true
script = ExtResource("2_bkena")
mind = 0
body = 1
spirit = 0

[sub_resource type="Resource" id="Resource_ryma3"]
resource_local_to_scene = true
script = ExtResource("2_bkena")
mind = 0
body = 0
spirit = 0

[sub_resource type="Resource" id="Resource_nobit"]
resource_local_to_scene = true
script = ExtResource("2_bkena")
mind = 1
body = 0
spirit = 0

[sub_resource type="Resource" id="Resource_7p6tn"]
resource_local_to_scene = true
script = ExtResource("2_bkena")
mind = 5
body = 0
spirit = 0

[node name="BasicHero" type="Node2D" groups=["character"]]
script = ExtResource("1_yk8tt")
max_stats = SubResource("Resource_fxmhd")
current_stats = SubResource("Resource_u3yh2")
is_max_stats = true
metadata/_edit_vertical_guides_ = [-15.9824, 16.0332]
metadata/_edit_horizontal_guides_ = [-13.9945, 14.0151]

[node name="ObjVisual" type="Polygon2D" parent="."]
color = Color(0.356863, 1, 0, 1)
polygon = PackedVector2Array(-8, 14, 8, 14, 16, 0, 8, -14, -8, -14, -16, 0)
script = ExtResource("2_3vm3s")

[node name="AbilityPool" type="Node2D" parent="."]
script = ExtResource("4_twbgf")

[node name="Move" parent="AbilityPool" instance=ExtResource("4_d6du7")]
costs = SubResource("Resource_ai6jt")

[node name="Ranged" parent="AbilityPool" instance=ExtResource("2_nlwwx")]
aoe = 0
dmg = SubResource("Resource_sa6fp")
targeting = 2
costs = SubResource("Resource_m5eeg")

[node name="Melee" parent="AbilityPool" instance=ExtResource("2_nlwwx")]
aoe = 0
dmg = SubResource("Resource_tkpgx")
ability_range = 1
targeting = 2
costs = SubResource("Resource_poxm0")

[node name="Debuff" parent="AbilityPool" instance=ExtResource("2_nlwwx")]
aoe = 0
dmg = SubResource("Resource_ryma3")
ability_range = 7
targeting = 2
costs = SubResource("Resource_nobit")

[node name="Effect" parent="AbilityPool/Debuff/Effects" index="0" instance_placeholder="res://effect.tscn"]
duration = 2
stats_changed = SubResource("Resource_7p6tn")

[node name="EffectPool" type="Node2D" parent="."]
script = ExtResource("4_twbgf")

[node name="ItemPool" type="Node2D" parent="."]
script = ExtResource("4_twbgf")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="PositionPresenter" type="StaticBody2D" parent="."]
process_mode = 3
z_index = 1
z_as_relative = false
collision_mask = 0
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PositionPresenter"]
polygon = PackedVector2Array(-8, 14, 8, 14, 16, 0, 8, -14, -8, -14, -16, 0)

[node name="StatsHolder" parent="PositionPresenter" instance=ExtResource("7_orrsb")]
visible = false
offset_left = -53.5882
offset_top = -117.391
offset_right = 1027.42
offset_bottom = 863.609
scale = Vector2(0.1, 0.1)

[node name="Num" parent="PositionPresenter/StatsHolder/Spirit" index="0"]
offset_left = 262.947
offset_top = 84.4359
offset_right = 481.947
offset_bottom = 262.436

[node name="Num" parent="PositionPresenter/StatsHolder/Mind" index="0"]
offset_left = 141.981
offset_top = 264.654
offset_right = 360.981
offset_bottom = 442.654

[node name="Multiplier" parent="PositionPresenter/StatsHolder" index="3"]
offset_left = 416.222
offset_top = 517.305
offset_right = 635.222
offset_bottom = 695.305

[connection signal="body_changed" from="." to="PositionPresenter/StatsHolder/Body" method="set_value"]
[connection signal="max_body_changed" from="." to="PositionPresenter/StatsHolder/Body" method="set_max"]
[connection signal="max_mind_changed" from="." to="PositionPresenter/StatsHolder/Mind" method="set_max"]
[connection signal="max_spirit_changed" from="." to="PositionPresenter/StatsHolder/Spirit" method="set_max"]
[connection signal="mind_changed" from="." to="PositionPresenter/StatsHolder/Mind" method="set_value"]
[connection signal="multiplier_changed" from="." to="PositionPresenter/StatsHolder/Multiplier" method="set_text_convert"]
[connection signal="spirit_changed" from="." to="PositionPresenter/StatsHolder/Spirit" method="set_value"]
[connection signal="child_entered_tree" from="AbilityPool" to="AbilityPool" method="_on_child_entered_tree"]
[connection signal="child_entered_tree" from="EffectPool" to="EffectPool" method="_on_child_entered_tree"]
[connection signal="child_entered_tree" from="ItemPool" to="ItemPool" method="_on_child_entered_tree"]
[connection signal="mouse_entered" from="PositionPresenter" to="PositionPresenter/StatsHolder" method="show"]
[connection signal="mouse_exited" from="PositionPresenter" to="PositionPresenter/StatsHolder" method="hide"]

[editable path="AbilityPool/Debuff"]
[editable path="PositionPresenter/StatsHolder"]
